[package]
name = "tokio-unix-ipc"
version = "0.1.0"
edition = "2018"
license = "MIT/Apache-2.0"
description = "A minimal abstraction for IPC via unix sockets."
homepage = "https://github.com/mitsuhiko/tokio-unix-ipc"
repository = "https://github.com/mitsuhiko/tokio-unix-ipc"
keywords = ["ipc", "unix-socket", "subprocess"]
readme = "README.md"
autoexamples = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["serde", "bootstrap"]
serde = ["serde_", "bincode"]
bootstrap = ["serde", "rand"]

[dependencies]
libc = "0.2.67"
nix = "0.22.0"
tokio = { version = "1.8.2", features = ["net"] }
serde_ = { package = "serde", version = "1.0.104", features = ["derive"], optional = true }
bincode = { version = "1.2.1", optional = true }
rand = { version = "0.8.0", optional = true }

[dev-dependencies]
tokio = { version = "1.8.2", features = ["macros", "rt", "rt-multi-thread"] }

[[example]]
name = "hello"
required-features = ["serde", "bootstrap"]