[package]
name = "tokio-unix-ipc"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "A minimal abstraction for IPC via unix sockets."
homepage = "https://github.com/mitsuhiko/tokio-unix-ipc"
repository = "https://github.com/mitsuhiko/tokio-unix-ipc"
keywords = ["ipc", "unix-socket", "subprocess"]
readme = "README.md"
autoexamples = true
autotests = true
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["serde", "bootstrap", "panic-support"]
serde = ["serde_", "bincode"]
serde-structural = ["serde", "rmp-serde"]
bootstrap = ["serde", "rand"]
panic-support = ["serde"]

[dependencies]
libc = "0.2.67"
nix = "0.24.0"
tokio = { version = "1.8.2", features = ["net", "sync"] }
serde_ = { package = "serde", version = "1.0.104", features = ["derive"], optional = true }
bincode = { version = "1.2.1", optional = true }
rand = { version = "0.8.0", optional = true }
rmp-serde = { version = "1.1.0", optional = true }
backtrace = { version = "0.3.43", optional = true, features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.8.2", features = ["macros", "rt", "rt-multi-thread", "process"] }

[[example]]
name = "hello"
required-features = ["serde", "bootstrap"]

[[test]]
name = "test_bootstrap"
required-features = ["bootstrap"]

[[test]]
name = "test_typed_channel"
required-features = ["serde"]
